--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
         </button>
         <div class="menu-logo">
             <div class="navbar-brand">
-                
+                <span class="navbar-logo">
+                    <a href="https://mobirise.com">
+                         <img src="assets/images/sa-white-134x134.png" alt="Mobirise" title="" media-simple="true" style="height: 3.8rem;">
+                    </a>
+                </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com"></a></span>
             </div>
         </div>
