--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
   
 </head>
 <body>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109602804-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109602804-1');
+</script>
+    
 <section class="menu cid-qy6xaojdhq" once="menu" id="menu1-h" data-rv-view="1858">
 
     
