Change Profile Picture

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 35%;">
-                <img src="assets/images/img-2188-1000x1192.jpg" alt="Mobirise" title="" media-simple="true">
+                <img src="assets/images/new-pic.jpg" alt="Mobirise" title="" media-simple="true">
             </div>
 
             <div class="media-content">
