--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/smartmockups-j9ptxv0b-1920x1440.jpg" alt="Mobirise" title="" media-simple="true">
+                        <img src="assets/images/smartmockups_jgj2d6tn.jpeg" alt="Mobirise" title="" media-simple="true">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Handyman In Hemet</h4>
+                        <h4 class="card-title mbr-fonts-style display-7">THE CUCKOO HOTEL AND BAR</h4>
                         <p class="mbr-text mbr-fonts-style display-7">I have converted the clients old static website to a modern designed website which is also responsive and optimized.</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://www.handymaninhemet.com/" class="btn btn-primary display-4">
