--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <h4 class="card-title mbr-fonts-style display-7">THE CUCKOO HOTEL AND BAR</h4>
                         <p class="mbr-text mbr-fonts-style display-7">I have converted the clients old static website to a modern designed website which is also responsive and optimized.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://www.handymaninhemet.com/" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="http://thecuckoon1.co.uk/" class="btn btn-primary display-4">
                             Visit Website</a></div>
                 </div>
             </div>
