--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         About</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-r" aria-expanded="true">
                         
                         Contact</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="assets/files/Seigfred-Ray-Alcopra-Resume.pdf" target="_blank"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>Download Resume</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="assets/files/Seigfred-Ray-Alcopra-Resume.pdf" target="_blank"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>View Resume</a></div>
         </div>
     </nav>
 </section>
