--- a/index.html
+++ b/index.html
@@ -184,7 +184,53 @@
         </h2>
         <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style display-5">Seigfred Ray Alcopra</h3>
 
+        <div class="row timeline-element reverse separline">      
+                <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
+                   <div class="time-line-date-content">
+                       <p class="mbr-timeline-date mbr-fonts-style display-5">
+                            August 2018- February 2019</p>
+                   </div>
+               </div>
+          <span class="iconBackground"></span>
+           <div class="col-xs-12 col-md-6 align-right">
+               <div class="timeline-text-content">
+                   <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Junior Software Developer</h4>
+                   <p class="mbr-timeline-text mbr-fonts-style display-7">
+                       <ul style="color:#fff; text-align: left;">
+                            <li>Develop user-facing applications using VueJS.</li>
+                            <li>Building modular and reusable components and libraries.</li>
+                            <li>Integration of user-facing elements developed by front-end developers.</li>
+                       </ul>                                          
+                  </p>
+                </div>
+           </div>
+           </div>
+
         <div class="container timelines-container" mbri-timelines="">
+                <div class="row timeline-element  separline">
+                        <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
+                            <div class="time-line-date-content">
+                                <p class="mbr-timeline-date mbr-fonts-style display-5">
+                                    February 2018 – August 2018</p>
+                            </div>
+                        </div>
+                        <span class="iconBackground"></span>
+                        <div class="col-xs-12 col-md-6 align-left ">
+                            <div class="timeline-text-content">
+                                <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Wordpress Developer</h4>
+                                <p class="mbr-timeline-text mbr-fonts-style display-7">
+                                        <ul style="color:#fff; text-align: left;">
+                                            <li>Server and domain Setup.</li>
+                                            <li>Designing and implementing new features and functionality.</li>
+                                            <li>Test and maintain website to ensure strong functionality and optimization.</li>
+                                            <li>Recommend improvements to existing setup as necessary.</li>
+                                        </ul>
+                                        
+                                </p>
+                            </div>
+                        </div>
+                    </div> 
+
             <div class="row timeline-element reverse separline">      
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
@@ -206,7 +252,7 @@
                 <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
                     <div class="time-line-date-content">
                         <p class="mbr-timeline-date mbr-fonts-style display-5">
-                            2016 April - Present</p>
+                            2016 April - 2018</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -233,7 +279,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Graduated (BSIT)</h4>      
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">&nbsp;with a Bachelor of Science degree in <strong>Information Technology</strong> at Iligan Medical Center College.
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">&nbsp;With a Bachelor of Science degree in <strong>Information Technology</strong> at Iligan Medical Center College.
                         </p>
                     </div>
                 </div>
@@ -272,7 +318,7 @@
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
                     CONTACT ME</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-7">For any question or job offer in this form or via email at <a href="mailto:seigfredray@gmail.com">seigfredray@gmail.com</a></h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-7">For any question or job offer in this form or via email at <a href="mailto:seigfredalcopra@gmail.com">seigfredalcopra@gmail.com</a></h3>
             </div>
         </div>
     </div>
@@ -343,7 +389,7 @@
                             <a href="tel:+63-916-7562651"><span class="mbr-iconfont mbr-iconfont-social mbri-mobile" media-simple="true"></span></a>
                         
                     </div><div class="soc-item">
-                        <a href="mailto:seigfredray@gmail.com">
+                        <a href="mailto:seigfredalcopra@gmail.com">
                             <span class="mbr-iconfont mbr-iconfont-social mbri-letter" media-simple="true"></span>
                         </a>
                     </div></div>
