--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                    </div>
                </div>
           <span class="iconBackground"></span>
-           <div class="col-xs-12 col-md-6 align-right">
+           <div class="col-xs-12 col-md-6 align-left">
                <div class="timeline-text-content">
                    <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Junior Software Developer</h4>
                    <p class="mbr-timeline-text mbr-fonts-style display-7">
